--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -223,6 +223,9 @@ aks create:
     enable_node_public_ip:
       rule_exclusions:
       - option_length_too_long
+    node_public_ip_prefix_id:
+      rule_exclusions:
+        - option_length_too_long
     enable_private_cluster:
       rule_exclusions:
       - option_length_too_long
@@ -269,6 +272,9 @@ aks install-cli:
 aks nodepool add:
   parameters:
     enable_node_public_ip:
+      rule_exclusions:
+      - option_length_too_long
+    node_public_ip_prefix_id:
       rule_exclusions:
       - option_length_too_long
 aks update:
