--- a/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_mysql_flexible_server_vnet_mgmt_supplied_vname_and_subnetname.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_mysql_flexible_server_vnet_mgmt_supplied_vname_and_subnetname.yaml
@@ -1439,8 +1439,8 @@ interactions:
       x-ms-failure-cause:
       - gateway
     status:
-      code: 404
-      message: Not Found
+      code: 200
+      message: OK
 - request:
     body: '{"location": "eastus2euap", "properties": {"addressSpace": {"addressPrefixes":
       ["10.0.0.0/16"]}, "enableDdosProtection": false, "enableVmProtection": false}}'
@@ -3000,8 +3000,8 @@ interactions:
       x-content-type-options:
       - nosniff
     status:
-      code: 404
-      message: Not Found
+      code: 200
+      message: OK
 - request:
     body: '{"properties": {"charset": "utf8"}}'
     headers:
