--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,7 +3,7 @@
 *help.py @msyyc @jiasli @jsntcy
 *help.yaml @msyyc @jiasli @jsntcy
 *help.yml @msyyc @jiasli @jsntcy
-recordings/*.yaml @ghost
+**/recordings/*.yaml @ghost
 
 /linter_exclusions.yml @jsntcy @kairu-ms
 
