--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -54,4 +54,5 @@
 /src/azure-cli/azure/cli/command_modules/util/ @jiasli @Juliehzl @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/vm/ @qwordy @houk-ms @yungezz
 
-**/recordings/*.yaml @ghost
+# if only .yml files of test are changed, there is no need to ask real codeowners to approve before merge the PR
+**/recordings/*.yaml @msyyc
