--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -55,4 +55,4 @@
 /src/azure-cli/azure/cli/command_modules/vm/ @qwordy @houk-ms @yungezz
 
 # if only .yml files of test are changed, there is no need to ask real codeowners to approve before merge the PR
-**/recordings/*.yaml @msyyc
+**/recordings/*.yaml @jsntcy @kairu-ms @msyyc
