--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_directory_download.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_directory_download.yaml
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Tue, 16 Mar 2021 07:58:18 GMT
+      - Tue, 16 Mar 2021 08:23:02 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
+      - '11998'
     status:
       code: 200
       message: OK
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Tue, 16 Mar 2021 07:58:19 GMT
+      - Tue, 16 Mar 2021 08:23:03 GMT
       expires:
       - '-1'
       pragma:
@@ -95,7 +95,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11999'
+      - '11998'
     status:
       code: 200
       message: OK
@@ -117,7 +117,7 @@ interactions:
       User-Agent:
       - AZURECLI/2.20.0 azsdk-python-storage-dfs/12.2.2 Python/3.7.9 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Tue, 16 Mar 2021 07:58:19 GMT
+      - Tue, 16 Mar 2021 08:23:03 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -129,57 +129,13 @@ interactions:
       content-length:
       - '0'
       date:
-      - Tue, 16 Mar 2021 07:58:22 GMT
+      - Tue, 16 Mar 2021 08:23:06 GMT
       etag:
-      - '"0x8D8E851458B83B4"'
+      - '"0x8D8E854BA06E6DD"'
       last-modified:
-      - Tue, 16 Mar 2021 07:58:22 GMT
+      - Tue, 16 Mar 2021 08:23:06 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-version:
-      - '2020-02-10'
-    status:
-      code: 201
-      message: Created
-- request:
-    body: null
-    headers:
-      Accept:
-      - application/json
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage fs directory create
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -n -f --account-name --account-key
-      User-Agent:
-      - AZURECLI/2.20.0 azsdk-python-storage-dfs/12.2.2 Python/3.7.9 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Tue, 16 Mar 2021 07:58:23 GMT
-      x-ms-properties:
-      - ''
-      x-ms-version:
-      - '2020-02-10'
-    method: PUT
-    uri: https://clitest000002.dfs.core.windows.net/filesystem000003/dir?resource=directory
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Tue, 16 Mar 2021 07:58:23 GMT
-      etag:
-      - '"0x8D8E85146673DF0"'
-      last-modified:
-      - Tue, 16 Mar 2021 07:58:24 GMT
-      server:
-      - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
       - '2020-02-10'
     status:
@@ -193,50 +149,28 @@ interactions:
       User-Agent:
       - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.9; Windows 10) AZURECLI/2.20.0
       x-ms-date:
-      - Tue, 16 Mar 2021 07:58:24 GMT
+      - Tue, 16 Mar 2021 08:23:07 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/filesystem000003/dir
+    uri: https://clitest000002.blob.core.windows.net/filesystem000003/dir000004
   response:
     body:
       string: ''
     headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '0'
-      content-type:
-      - application/octet-stream
       date:
-      - Tue, 16 Mar 2021 07:58:25 GMT
-      etag:
-      - '"0x8D8E85146673DF0"'
-      last-modified:
-      - Tue, 16 Mar 2021 07:58:24 GMT
+      - Tue, 16 Mar 2021 08:23:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-access-tier:
-      - Hot
-      x-ms-access-tier-inferred:
-      - 'true'
-      x-ms-blob-type:
-      - BlockBlob
-      x-ms-creation-time:
-      - Tue, 16 Mar 2021 07:58:24 GMT
-      x-ms-lease-state:
-      - available
-      x-ms-lease-status:
-      - unlocked
-      x-ms-meta-hdi_isfolder:
-      - 'true'
-      x-ms-server-encrypted:
-      - 'true'
+      transfer-encoding:
+      - chunked
+      x-ms-error-code:
+      - BlobNotFound
       x-ms-version:
       - '2018-11-09'
     status:
-      code: 200
-      message: OK
+      code: 404
+      message: The specified blob does not exist.
 - request:
     body: null
     headers:
@@ -245,11 +179,11 @@ interactions:
       User-Agent:
       - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.9; Windows 10) AZURECLI/2.20.0
       x-ms-date:
-      - Tue, 16 Mar 2021 07:58:29 GMT
+      - Tue, 16 Mar 2021 08:23:12 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/filesystem000003/dir
+    uri: https://clitest000002.blob.core.windows.net/filesystem000003/dir000004
   response:
     body:
       string: ''
@@ -258,14 +192,12 @@ interactions:
       - bytes
       content-length:
       - '0'
-      content-type:
-      - application/octet-stream
       date:
-      - Tue, 16 Mar 2021 07:58:30 GMT
+      - Tue, 16 Mar 2021 08:23:12 GMT
       etag:
-      - '"0x8D8E85146673DF0"'
+      - '"0x8D8E854BCC1C8D5"'
       last-modified:
-      - Tue, 16 Mar 2021 07:58:24 GMT
+      - Tue, 16 Mar 2021 08:23:11 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -275,7 +207,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Tue, 16 Mar 2021 07:58:24 GMT
+      - Tue, 16 Mar 2021 08:23:11 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
