--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_directory_download.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_directory_download.yaml
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Tue, 16 Mar 2021 08:23:02 GMT
+      - Tue, 16 Mar 2021 09:07:03 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
+      - '11999'
     status:
       code: 200
       message: OK
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Tue, 16 Mar 2021 08:23:03 GMT
+      - Tue, 16 Mar 2021 09:07:05 GMT
       expires:
       - '-1'
       pragma:
@@ -95,7 +95,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
+      - '11996'
     status:
       code: 200
       message: OK
@@ -117,11 +117,11 @@ interactions:
       User-Agent:
       - AZURECLI/2.20.0 azsdk-python-storage-dfs/12.2.2 Python/3.7.9 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Tue, 16 Mar 2021 08:23:03 GMT
+      - Tue, 16 Mar 2021 09:07:05 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
-    uri: https://clitest000002.blob.core.windows.net/filesystem000003?restype=container
+    uri: https://clitest000002.blob.core.windows.net/testfilesystem?restype=container
   response:
     body:
       string: ''
@@ -129,11 +129,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Tue, 16 Mar 2021 08:23:06 GMT
+      - Tue, 16 Mar 2021 09:07:08 GMT
       etag:
-      - '"0x8D8E854BA06E6DD"'
+      - '"0x8D8E85AE07ED3A5"'
       last-modified:
-      - Tue, 16 Mar 2021 08:23:06 GMT
+      - Tue, 16 Mar 2021 09:07:08 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -149,17 +149,17 @@ interactions:
       User-Agent:
       - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.9; Windows 10) AZURECLI/2.20.0
       x-ms-date:
-      - Tue, 16 Mar 2021 08:23:07 GMT
+      - Tue, 16 Mar 2021 09:07:08 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/filesystem000003/dir000004
+    uri: https://clitest000002.blob.core.windows.net/testfilesystem/testdir
   response:
     body:
       string: ''
     headers:
       date:
-      - Tue, 16 Mar 2021 08:23:07 GMT
+      - Tue, 16 Mar 2021 09:07:09 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -179,11 +179,11 @@ interactions:
       User-Agent:
       - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.9; Windows 10) AZURECLI/2.20.0
       x-ms-date:
-      - Tue, 16 Mar 2021 08:23:12 GMT
+      - Tue, 16 Mar 2021 09:07:13 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/filesystem000003/dir000004
+    uri: https://clitest000002.blob.core.windows.net/testfilesystem/testdir
   response:
     body:
       string: ''
@@ -193,11 +193,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Tue, 16 Mar 2021 08:23:12 GMT
+      - Tue, 16 Mar 2021 09:07:14 GMT
       etag:
-      - '"0x8D8E854BCC1C8D5"'
+      - '"0x8D8E85AE3259036"'
       last-modified:
-      - Tue, 16 Mar 2021 08:23:11 GMT
+      - Tue, 16 Mar 2021 09:07:12 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -207,7 +207,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Tue, 16 Mar 2021 08:23:11 GMT
+      - Tue, 16 Mar 2021 09:07:12 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
