--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -201,24 +201,36 @@ jobs:
     inputs:
       targetType: inline
       script: |
-        # Elevate as Admin
         if (-NOT ([Security.Principal.WindowsPrincipal][Security.Principal.WindowsIdentity]::GetCurrent()).IsInRole([Security.Principal.WindowsBuiltInRole] "Administrator")) {  
+          # Start another Powershell process as Admin and execute this script again
           $arguments = "& '" +$myinvocation.mycommand.definition + "'"
           Start-Process powershell -Verb runAs -ArgumentList $arguments
+          # Stop if the PowerShell is not run as Admin
           Break
         }
+        # The following are executed by elevated PowerShell
         az --version
+
+        $InstallArgs = @(
+          "/i"
+          "`"$env:SYSTEM_ARTIFACTSDIRECTORY\msi\Microsoft Azure CLI.msi`""
+          "/q"
+          "/norestart"
+          "/l*v"
+          ".\install_logs.txt"
+        )
         $pre_installed_version=az version --query '\"azure-cli\"' -o tsv
         $to_be_installed_version=Get-Content $(System.ArtifactsDirectory)/metadata/version
         if ($pre_installed_version -eq $to_be_installed_version){
-          $reinstall_option="REINSTALL=ALL REINSTALLMODE=emus"
-        }else {
-          $reinstall_option=""
+          # See https://docs.microsoft.com/windows/win32/msi/reinstallmode about options of REINSTALLMODE
+          $reinstall_option="REINSTALL=ALL REINSTALLMODE=emus" 
+          $InstallArgs += $reinstall_option
         }
-        Start-Process "msiexec.exe" -ArgumentList "/i `"$env:SYSTEM_ARTIFACTSDIRECTORY\msi\Microsoft Azure CLI.msi`" $reinstall_option /q /norestart /l*v .\install_logs.txt" -Wait -NoNewWindow
+        Start-Process "msiexec.exe" -ArgumentList $InstallArgs -Wait -NoNewWindow
         Get-Content .\install_logs.txt
         $installed_version=az version --query '\"azure-cli\"' -o tsv
         if ($installed_version -ne $to_be_installed_version){
+          echo "The MSI failed to install."
           Exit 1
         }
         az --version
