--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -65,7 +65,7 @@ azure-mgmt-netapp==0.16.0
 azure-mgmt-network==18.0.0
 azure-mgmt-policyinsights==0.5.0
 azure-mgmt-privatedns==0.1.0
-azure-mgmt-rdbms==8.0.0
+azure-mgmt-rdbms==8.1.0b1
 azure-mgmt-recoveryservices==0.4.0
 azure-mgmt-recoveryservicesbackup==0.11.0
 azure-mgmt-redhatopenshift==0.1.0
